--- a/assets/styles/pages/_review-supliers.scss
+++ b/assets/styles/pages/_review-supliers.scss
@@ -50,3 +50,7 @@
     line-height: 26px;
     margin-top: 5px;
 }
+
+.app-step-nav--large .app-step-nav__list{
+    margin-bottom: 25px;
+}
