--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -7497,6 +7497,9 @@ img {
   line-height: 26px;
   margin-top: 5px; }
 
+.app-step-nav--large .app-step-nav__list {
+  margin-bottom: 25px; }
+
 /*------------------------------------*\
   #News
 \*------------------------------------*/
@@ -7621,8 +7624,11 @@ a.skip-main:focus {
   margin-bottom: 0; }
 
 .govuk-inset-text {
-  margin-top: 25px;
-  margin-bottom: 40px; }
+  margin-top: 0px;
+  margin-bottom: 0px; }
+
+.govuk-summary-list {
+  margin-top: 40px; }
 
 .govuk-body-m, .wp-caption-text {
   margin-bottom: 1.5625rem; }
@@ -7648,5 +7654,8 @@ a.skip-main:focus {
 #step-by-step-navigation {
   margin-bottom: 0px; }
 
-.app-step-nav__step:last-child .app-step-nav__header {
-  border-bottom: 1px solid #bfc1c3; }
+/*
+.app-step-nav__step:last-child .app-step-nav__header{
+    border-bottom: 1px solid #bfc1c3;
+}
+*/
